--- a/Brink Theme/modHideHentaiCovers.css
+++ b/Brink Theme/modHideHentaiCovers.css
@@ -1,32 +1,11 @@
 /*------------------------------*\
-|*  Hide Hentai Covers  v1.0.2  *|
+|*  Hide Hentai Covers  v1.0.3  *|
 \* - - - - - - - - - - - - - - -*/
 
-.data.tags {
-	overflow: initial;
-	opacity: 1;
-}
-
-.data.tags span {
-	min-height: initial;
-	margin-bottom: 0;
-}
-
-.data.tags a {
-	min-height: 15px;
-	margin-bottom: 4px;
-	opacity: 0;
-	transition:
-		color var(--timeText) var(--bezierFast),
-		opacity calc(var(--timeItem) * 1.5) var(--bezierFast);
-} .list-item:hover .data.tags a,
-.list-item:focus-within .data.tags a {
-	opacity: 1;
-}
+/* requires "Allow Tag Overflow" mod */
 
 .data.tags a[href$="tag=Hentai"] {
 	position: absolute;
-	z-index: 5;
 	top: -51px;
 	right: -12px;
 	width: 210px;
