--- a/Clarified Theme/Modifications/Renders.css
+++ b/Clarified Theme/Modifications/Renders.css
@@ -1,23 +1,23 @@
 /**
  * Side Renders
- * v1.0.0
+ * v1.0.1
  */
 
 /* Left Render */
 
 footer:before {
-	right: calc(100% - (50% - 538px));
-	background-image: url(URLHERE);
-	background-position: left bottom;
+	right: calc(100% - (50% - var(--render-offset)));
+	background-image: url(https://i.imgur.com/CqLKXd5.png);
+	background-position: right bottom;
 	background-size: contain;
 }
 
 /* Right Render */
 
 footer:after {
-	left: calc(100% - (50% - 538px));
-	background-image: url(URLHERE);
-	background-position: right bottom;
+	left: calc(100% - (50% - var(--render-offset)));
+	background-image: url(https://i.imgur.com/CqLKXd5.png);
+	background-position: left bottom;
 	background-size: contain;
 }
 
@@ -28,22 +28,17 @@ footer:before, footer:after {
 	position: fixed;
 	top: 0;
 	z-index: -1;
-	
-	width: calc(50% - 538px);
+	width: calc(50% - var(--render-offset));
 	min-width: 262px;
 	height: 100%;
 	background-repeat: no-repeat;
 }
+:root { --render-offset: 538px; }
 
 /* Fix layering */
 
 .header {
 	z-index: 1;
-}
-
-footer {
-	position: relative;
-	z-index: 0;
 }
 
 /* END of Side Renders */
